--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -1,3 +1,8 @@
 {{!-- {{outlet}} --}}
 
 <h2>List of Todos</h2>
+<ul>
+    {{#each model as |todo|}}
+        <li>{{todo}}</li>
+    {{/each}}
+</ul>
