rename every done-todos to todos-list and add a viewTodo action listening for a click event on each todo

--- a/app/templates/components/todos-list.hbs
+++ b/app/templates/components/todos-list.hbs
@@ -1,9 +1,9 @@
-{{yield}}
+{{!-- {{yield}} --}}
 
 {{title}}
 
 <ul>
     {{#each todos as | todo |}}
-        <li>{{ todo }}</li>
+        <li {{action "viewTodo" todo}}>{{ todo }}</li>
     {{/each}}
 </ul>
