Add a navbar template and use partials to render it

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,2 +1,7 @@
-<h1>Ember Todo App</h1>
-{{outlet}}
+{{!-- <h1>Ember Todo App</h1>
+{{outlet}} --}}
+
+<div class="container">
+    {{partial 'navbar'}}{{!-- Partials is an old style (Components coming through soon)--}}
+    {{outlet}}
+</div>
