--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,12 @@
-<h1>Home</h1>
+<div class="jumbotron text-center">
+    <h3>Add a todo item</h3>
+    <p>It's easier to keep up with your todos when you KISS it.</p>
+    <div class="form-horizontal form-group form-group-lg row">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-5 col-md-offset-2">
+            <input type="text" class="form-control" placeholder="eg. Write about SSH" autofocus="autofocus" />
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-2 col-md-2">
+            <button class="btn btn-primary btn-lg btn-block">Add</button>
+        </div>
+    </div>
+</div>
