--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,7 +6,7 @@
             {{input type="text" value=todoItem class="form-control" placeholder="eg. Write about SSH" autofocus="autofocus"}}
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-2 col-md-2">
-            <button disabled={{isDisabled}} class="btn btn-primary btn-lg btn-block">Add</button>
+            <button disabled={{isDisabled}} {{action 'addTodo'}} class="btn btn-primary btn-lg btn-block">Add</button>
         </div>
     </div>
 </div>
