--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -12,9 +12,10 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
-            {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
-            {{#link-to 'todos' tagName="li"}} <a href="">Todos</a> {{/link-to}}
+        {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
+        {{#link-to 'todos' tagName="li"}} <a href="">Todos</a> {{/link-to}}
+        {{#link-to 'contact' tagName="li"}} <a href="">Contact</a> {{/link-to}}
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
