--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,22 @@
-<h1>Contact</h1>
+<div class="container">
+  <h1>Contact</h1>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <div class="col-sm-6">
+        <p><label for="inputEmail3" class="control-label">Email:</label></p>
+        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-6">
+        <p><label for="inputPassword3" class="control-label">Message:</label></p>
+        <textarea class="form-control" rows="3"></textarea>      
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-6">
+        <button type="submit" class="btn btn-default">Send</button>
+      </div>
+    </div>
+  </form>
+</div>
