Fix indentation linting errors on contact template

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -4,13 +4,24 @@
     <div class="form-group">
       <div class="col-sm-6">
         <p><label for="inputEmail" class="control-label">Email:</label></p>
-        {{input type="email" value=emailAddress class="form-control" placeholder="Email" autofocus="autofocus"}}
+        {{input
+          type="email"
+          value=emailAddress
+          class="form-control"
+          placeholder="Email"
+          autofocus="autofocus"
+        }}
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-6">
         <p><label for="message" class="control-label">Message:</label></p>
-        {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="7" value=message}}      
+        {{textarea
+          class="form-control"
+          placeholder="Your message. (At least 5 characters.)"
+          rows="7"
+          value=message
+        }}      
       </div>
     </div>
     <div class="form-group">
