--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -26,7 +26,14 @@
     </div>
     <div class="form-group">
       <div class="col-sm-6">
-        <button type="submit" class="btn btn-default" disabled={{isDisabled}}>Send</button>
+        <button
+          type="submit"
+          class="btn btn-default"
+          disabled={{isDisabled}} 
+          {{action "sendMessage"}}
+        >
+          Send
+        </button>
       </div>
     </div>
   </form>
