fix template error on application.hbs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,6 @@
 {{outlet}} --}}
 
 <div class="container">
-    {{partial 'navbar'}}{{!-- Partials is an old style (Components coming through soon)--}}
-    {{outlet}}
+  {{partial "navbar"}}{{!-- Partials is an old style (Components coming through soon)--}}
+  {{outlet}}
 </div>
