--- a/app/templates/components/todos-list.hbs
+++ b/app/templates/components/todos-list.hbs
@@ -1,17 +1,15 @@
-{{title}}
+<h2>{{title}}</h2>
 
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>Todo ID</th>
-      <th>Todo Item</th>
+      <th>Todo Items</th>
     </tr>
   </thead>
   <tbody>
     {{#each todos as |todo|}}
       <tr>
-        <td>{{todo.id}}</td>
-        <td>{{todo.todoItem}}</td>
+        <td>{{todo.todoItem}} <button class="btn btn-primary pull-right">start</button></td>
       </tr>
     {{/each}}
   </tbody>
